<resources>
    <string name="app_name">滴滴快讯</string>
    <string name="map_common">普通地图</string>
    <string name="map_site">卫星地图</string>
    <string name="map_traffic">实时交通(off)</string>
    <string name="aks_version">版本号</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title">标题</string>
    <string name="address">临沂</string>
    <string name="edit">Edit</string>
    <string name="app_search">请出入关键词搜索</string>
    <string name="tab_index">首页</string>
    <string name="tab_order">订单</string>
    <string name="tab_seting">我的</string>
    <string name="index_like">猜你喜欢</string>
    <string name="index_like_more">更多></string>
    <string name="index_foods">餐饮</string>
    <string name="index_hotel">酒店</string>
    <string name="index_shops">商铺</string>
    <string name="index_cars">拼车</string>
    <string name="index_bianmin">便民</string>
    <string name="index_zhaopin">招聘</string>
    <string name="index_fangchan">房产</string>
    <string name="index_gongqiu">供求</string>
    <string name="integral_mall">积分商城</string>
    <string name="preferential_good">感恩特惠商品</string>
    <string name="integral_luck">积分抽奖</string>
    <string name="index_product_title">产品名称</string>
    <string name="index_product_content">内容简介内容简介内容简介内容简介内容简介内容简介内容简介内容简介内容简介&#8230;</string>
    <string name="index_product_distance">&lt;500m</string>
    <string name="index_product_price">88元</string>
    <string name="index_product_other">● ● ●</string>
    <string name="restaurant_name">餐厅名称餐厅名称</string>
    <string name="restaurant_time">用餐时间：2015&#8211;06&#8211;17 14：00&#8211;16：00</string>
    <string name="reserve_time">预定时间：2015&#8211;06&#8211;16 14：30</string>
    <string name="order_delete">删除订单</string>
    <string name="order_assess">评价</string>
    <string name="restaurant_score">评价：4.5分</string>
    <string name="restaurant_address">地址：餐厅地址餐厅地址餐厅地址餐厅地</string>
    <string name="res_introduct">餐厅简介：</string>
    <string name="res_assess">评价列表</string>
    <string name="res_assess_name">还**吹</string>
    <string name="res_assess_time">2015&#8211;06&#8211;17 14：00</string>
    <string name="res_assess_more">查看更多评价</string>
    <string name="reserve_go">立即抢购</string>
    <string name="reserve_go2">立即预定</string>
    <string name="good_price">88元</string>
    <string name="good_assess">122评价></string>
    <string name="buy_info">购买须知</string>
    <string name="title_one">有效期：</string>
    <string name="title_two">使用时间：</string>
    <string name="title_three">使用规则：</string>
    <string name="buy_assess">宝贝评价</string>
    <string name="all_assess">整体评价</string>
    <string name="write_hint">您的意见很重要！来点评一下吧···</string>
    <string name="submit_assess">提交评价</string>
    <string name="user_carpool_need">我要拼车</string>
    <string name="user_carpool_owner">我是车主</string>
    <string name="user_carpool_origin_1">出&#160;&#160;发&#160;&#160;地</string>
    <string name="user_carpool_destination_1">目&#160;&#160;的&#160;&#160;地</string>
    <string name="user_carpool_departure_time_1">出发时间</string>
    <string name="user_carpool_remain_seats_1">剩余座位</string>
    <string name="datetime_picker">\t\t月\t\t日\t\t时\t\t分</string>
    <string name="user_carpool_car_model">车&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;型</string>
    <string name="user_carpool_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="user_carpool_phone">联系电话</string>
    <string name="user_carpool_submit">提交信息</string>
    <string name="user_carpool_remain_seats">剩余座位</string>
    <string name="user_carpool_number">人&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数</string>
    <string name="user_carpool_cost">预计费用</string>
    <string name="user_carpool_origin_2">出&#160;&#160;发&#160;&#160;地：</string>
    <string name="user_carpool_destination_2">目&#160;&#160;的&#160;&#160;地：</string>
    <string name="user_carpool_departure_time_2">时&#160;&#160;间&#160;&#160;段：</string>
    <string name="user_carpool_remain_seats_2">剩余座位：</string>
    <string name="user_sign_up_number">报名人数</string>
    <string name="user_sign_up_number_default">1</string>
    <string name="user_carpool_unit_price">单价：&#160;&#160;￥</string>
    <string name="user_carpool_sign_up">立即报名</string>
    <string name="orign">请输入出发地</string>
    <string name="destination">请输入目的地</string>
    <string name="starttime">请输入出发时间</string>
    <string name="persons">请输入人数</string>
    <string name="name">请输入姓名</string>
    <string name="mobile">联系电话</string>
    <string name="seats">请输入剩余座位</string>
    <string name="type">请输入车型</string>
    <string name="cost">请输入费用</string>
    <string name="order_tab1">未付款</string>
    <string name="order_tab2">未消费</string>
    <string name="order_tab3">已消费</string>
    <string name="order_tab4">已退款</string>
    <string name="reserve_tab1">餐厅预订</string>
    <string name="reserve_tab2">酒店预订</string>
    <string name="res_name">店铺名称</string>
    <string name="order_num">订单编号：9876543210987654321645</string>
    <string name="order_state">订单状态</string>
    <string name="order_mobile">购买手机号：</string>
    <string name="order_time">下单时间</string>
    <string name="order_date">2015&#8211;06&#8211;17</string>
    <string name="product_price">￥98.00</string>
    <string name="product_num">x1</string>
    <string name="total_price">总价：￥98.00</string>
    <string name="order1">联系人姓名：</string>
    <string name="order2">联系电话：</string>
    <string name="order3">下单时间：</string>
    <string name="order4">用餐时间：2015&#8211;28&#8211;28 14：00&#8211;16：00</string>
    <string name="order5">用餐人数：10人</string>
    <string name="order6">预计消费：300元</string>
    <string name="order_people">张先生</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_pay">付款</string>
    <string name="assess_orange">评价</string>
    <string name="assess_gray">已评价</string>
    <string name="order_del">删除订单</string>
    <string name="demand_call">一键拨号</string>
    <string name="demand_time">发布时间：09&#8211;22 08：00</string>
    <string name="demand_person">联系人：叶良辰</string>
    <string name="demand_mobile">联系电话：13325095533</string>
    <string name="demand_content">文字描述</string>
	<string name="demand_type">信息分类</string>
	<string name="demand_title">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
	<string name="demand_caller">联&#160;&#160;系&#160;&#160;人</string>
	<string name="demand_tel">联系电话</string>
	<string name="demand_info">信息描述</string>
	<string name="demand_submit">发布信息</string>
    <string name="user_mobile">183****5566</string>
    <string name="user_login">登录/注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="invite">邀请人</string>
    <string name="hint_username">请填写手机号</string>
    <string name="hint_code">验证码</string>
    <string name="hint_password">请填写密码</string>
    <string name="hint_invite">手机号(选填)</string>
    <string name="forgetpwd"><u>忘记密码?</u></string>
    <string name="login_in">登录</string>
    <string name="register_in">注册</string>
    <string name="identifying_code">点击获取验证码</string>
    <string name="user_money">￥0.0</string>
    <string name="user_integral">0</string>
    <string name="my_money">我的钱包</string>
    <string name="my_integral">积分</string>
    <string name="user_store">我的收藏</string>
    <string name="app_about">关于我们</string>
    <string name="app_explain">应用说明</string>
    <string name="reset_password">重置密码</string>
    <string name="app_version">版本更新</string>
    <string name="app_version_default">已是最新版本</string>
    <string name="login_register">没有账号?</string>
    <string name="login_out">退出登录</string>
    <string name="submit">提交</string>
    <string name="user_avatar">头像</string>
    <string name="user_name">昵称</string>
    <string name="add_name">添加昵称</string>
    <string name="user_mob">手机号</string>
    <string name="mobile_number">150****8533</string>
    <string name="alipay_allow">钱包余额</string>
    <string name="alipay_money">56.00元</string>
    <string name="alipay_allow_out">余额转出(提现)</string>
    <string name="alipay_allow_money">转出金额</string>
    <string name="alipay_allow_hint">请输入转出金额</string>
    <string name="alipay_name_text">支&#160;&#160;付&#160;&#160;宝</string>
    <string name="alipay_name_hint">请输入支付宝账号</string>
    <string name="alipay_allow_sure">确认转出</string>
    <string name="store_pro">收藏的产品</string>
    <string name="store_res">收藏的店铺</string>
    <string name="store_delete">删除</string>
    <string name="record_address">山东 临沂 2015&#8211;06&#8211;30</string>
    <string name="collection_name">店铺名称店铺名称</string>
    <string name="collection_time">2015-07-16 收藏</string>
    <string name="zixun">资讯</string>
    <string name="gouwu">购物</string>
    <string name="shenghuo">生活</string>
    <string name="chaxun">查询</string>
    <string name="info_temperature">20°</string>
    <string name="info_weather">多云</string>
    <string name="info_city">临沂</string>
    <string name="info_wind">微风\t\t小于3级</string>
    <string name="index_baidu">百度</string>
    <string name="index_sina">新浪</string>
    <string name="index_tencent">腾讯</string>
    <string name="index_suhoo">搜狐</string>
    <string name="index_ifeng">凤凰</string>
    <string name="index_taobao">淘宝</string>
    <string name="index_jingdong">京东</string>
    <string name="index_tianmao">天猫</string>
    <string name="index_1haodian">1号店</string>
    <string name="index_weipinhui">唯品会</string>
    <string name="index_ganji">赶集</string>
    <string name="index_youyuan">有缘网</string>
    <string name="index_suhoodv">搜狐视频</string>
    <string name="index_game">游戏</string>
    <string name="index_bookreader">电子书</string>
    <string name="index_gowhere">去哪儿</string>
    <string name="index_12306">火车票</string>
    <string name="index_weizhang">汽车违章</string>
    <string name="index_kuaidi">快递</string>
    <string name="index_caipiao">彩票开奖</string>
    <string name="zp_all">全部</string>
    <string name="zp_jianzhi">兼职</string>
    <string name="zp_sell">销售</string>
    <string name="zp_zonghe">综合</string>
    <string name="zp_zhiweiname">职位名称</string>
    <string name="zp_salary">薪资区间</string>
    <string name="zp_item_salary">薪资：</string>
    <string name="zp_salary2">2000-3000元</string>
    <string name="zp_persons">人&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数</string>
    <string name="zp_item_persons">人数：</string>
    <string name="zp_item_persons2">2人</string>
    <string name="zp_item_date">09-22</string>
    <string name="zp_persons2">招聘人数：</string>
    <string name="zp_person_hint">数字填写，不能是0和负数</string>
    <string name="zp_person">人</string>
    <string name="zp_contacts">联&#160;&#160;系&#160;&#160;人</string>
    <string name="zp_contacts2">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="zp_contacts_name">孙总</string>
    <string name="zp_contacts_hint">2-6字，汉字或字母</string>
    <string name="zp_mobile">联系电话</string>
    <string name="zp_mobile2">联系电话：</string>
    <string name="zp_mobilecode">1505566778</string>
    <string name="zp_mobile_hint">只能填写手机号或电话号码</string>
    <string name="zp_comp_name">公司名称</string>
    <string name="zp_comp_name2">公司名称：</string>
    <string name="zp_comp_address">公司地址</string>
    <string name="zp_comp_address2">公司地址：</string>
    <string name="zp_comp_address_hint">7-40字的详述描述</string>
    <string name="zp_comp_about">公司简介</string>
    <string name="zp_comp_about2">公司简介：</string>
    <string name="zp_zhiweisort">职位类别</string>
    <string name="zp_position_require">职位要求：</string>
    <string name="zp_zhiweidescrip">职位描述</string>
    <string name="zp_publish">发布招聘</string>
    <string name="zp_publish_time">发布时间：</string>
</resources>