<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical" >

        <RelativeLayout
            style="@style/carpool_head"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/user_carpool_owner"
                android:textColor="#FFF"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_origin_1"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_origin"
                style="@style/carpool_textview" 
                android:inputType="text"
                android:hint="@string/orign"/>"
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_destination_1"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_destination"
                style="@style/carpool_textview"
                android:inputType="text" 
                android:hint="@string/destination">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_departure_time_1"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_departure_time"
                style="@style/carpool_textview"
                android:inputType="datetime" 
                android:hint="@string/starttime">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_remain_seats_1"
                 android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_remain_seats"
                style="@style/carpool_textview"
                android:inputType="number" 
                android:hint="@string/seats">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_car_model"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_car_model"
                style="@style/carpool_textview"
                android:inputType="text" 
                android:hint="@string/type">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/user_carpool_name"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_name"
                style="@style/carpool_textview" 
                android:inputType="text"
                android:hint="@string/name">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1sp"
            android:background="@color/carpool"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:text="@string/user_carpool_phone"
                android:textColor="@color/text_dgrey"/>

            <EditText
                android:id="@+id/user_phone"
                style="@style/carpool_textview"
                android:inputType="number" 
                android:hint="@string/mobile">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btn_carpool_submit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="#ffc600"
                android:text="@string/user_carpool_submit" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>