<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/eight"
    android:background="@color/white" >
    
    <ImageView 
        android:layout_width="@dimen/one_hundred"
        android:layout_height="@dimen/ninety"
        android:src="@drawable/icon_image_default"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/eight">
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/twenty_five"
	        android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/product_title"
	            android:text="@string/index_product_title"
	            android:textColor="@color/black"
	            android:textSize="@dimen/t_eighteen"
	            android:layout_width="0.0dip"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:singleLine="true"/>
	        <TextView 
		        android:id="@+id/product_distance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/t_sixteen"
	            android:textColor="@color/text_light"
	            android:text="@string/index_product_distance"/>
        </LinearLayout>
        <TextView 
	        android:id="@+id/product_content"
            android:text="@string/index_product_content"
            android:textColor="@color/text_light"
            android:maxLines="2"
            android:textSize="@dimen/t_sixteen"
            android:paddingTop="@dimen/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/thirty"
	        android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/product_price"
	            android:text="@string/index_product_price"
	            android:textColor="@color/text_light"
	            android:textSize="@dimen/t_sixteen"
	            android:layout_width="0.0dip"
	            android:layout_height="match_parent"
	            android:layout_weight="1"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/t_sixteen"
	            android:textColor="@color/text_light"
	            android:text="@string/index_product_other"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
