<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    android:background="@color/content_background_color">
	<com.zykj.benditong.view.MyCommonTitle
        android:id="@+id/aci_mytitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/white"
	    android:layout_marginTop="@dimen/five"
	    android:paddingLeft="@dimen/fifteen"
	    android:paddingRight="@dimen/fifteen" >
	    
        <TextView 
            android:id="@+id/order_num"
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/forty_five"
		 	android:textSize="@dimen/t_fourteen"
	        android:gravity="center_vertical"
	        android:text="@string/order_num"/>
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/content_background_color"/>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingTop="@dimen/fifteen"
	        android:paddingBottom="@dimen/fifteen">
		    <ImageView 
		        android:id="@+id/order_img"
		        android:layout_width="@dimen/eighty"
		        android:layout_height="@dimen/eighty"
		        android:src="@drawable/icon_image_default"
		        android:scaleType="fitXY"
		        android:contentDescription="@string/app_name"/>
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:layout_marginLeft="@dimen/eight">
		        <TextView 
			        android:id="@+id/order_name"
		            android:text="@string/index_product_title"
		            android:textSize="@dimen/t_sixteen"
		            android:layout_width="fill_parent"
		            android:layout_height="match_parent"
		            android:singleLine="true"/>
		        <TextView 
			        android:id="@+id/order_time"
		            android:text="@string/order4"
		            android:textSize="@dimen/t_fourteen"
			       	android:textColor="@color/text_dgrey"
		            android:layout_width="fill_parent"
		            android:layout_marginTop="@dimen/six"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:singleLine="true"/>
		        <TextView 
			        android:id="@+id/order_pnum"
		            android:text="@string/order5"
		            android:textSize="@dimen/t_fourteen"
			       	android:textColor="@color/text_dgrey"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:singleLine="true"/>
		        <TextView 
			        android:id="@+id/order_price"
		            android:text="@string/order6"
		            android:textSize="@dimen/t_fourteen"
			       	android:textColor="@color/text_dgrey"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_vertical"
		            android:singleLine="true"/>
		    </LinearLayout>
	    </LinearLayout>
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/content_background_color"/>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/fifty"
	        android:orientation="horizontal"
	        android:paddingTop="@dimen/eight">
	        <TextView 
		        android:layout_width="0.0dip"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		      	android:textSize="@dimen/t_sixteen"
			  	android:textColor="@color/text_dgrey"
		        android:gravity="center_vertical"
		        android:text="@string/order1"/>
	        <TextView 
	            android:id="@+id/order_people"
	        	android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		      	android:textSize="@dimen/t_sixteen"
		        android:gravity="center_vertical"
			  	android:textColor="@color/black"
		        android:text="@string/order_people"/>
	    </LinearLayout>
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/content_background_color"/>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/fifty"
	        android:orientation="horizontal"
	        android:paddingTop="@dimen/eight">
	        <TextView 
		        android:layout_width="0.0dip"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		      	android:textSize="@dimen/t_sixteen"
			  	android:textColor="@color/text_dgrey"
		        android:gravity="center_vertical"
		        android:text="@string/order2"/>
	        <TextView 
	            android:id="@+id/order_mobile"
	        	android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		      	android:textSize="@dimen/t_sixteen"
		        android:gravity="center_vertical"
			  	android:textColor="@color/black"
		        android:text="@string/user_mobile"/>
	    </LinearLayout>
	    
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/one"
	        android:background="@color/content_background_color"/>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="@dimen/fifty"
	        android:orientation="horizontal"
	        android:paddingTop="@dimen/eight">
	        <TextView 
		        android:layout_width="0.0dip"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		      	android:textSize="@dimen/t_sixteen"
			  	android:textColor="@color/text_dgrey"
		        android:gravity="center_vertical"
		        android:text="@string/order3"/>
	        <TextView 
	            android:id="@+id/order_date"
	        	android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:gravity="center_vertical"
		      	android:textSize="@dimen/t_sixteen"
			  	android:textColor="@color/black"
		        android:text="@string/order_date"/>
	    </LinearLayout>
	    
	</LinearLayout>
	<View 
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1"/>
	
    <View 
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/dgrey"/>
    
    <LinearLayout 
        android:id="@+id/aci_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty"
        android:orientation="horizontal"
        android:paddingTop="@dimen/eight">
	    <View 
	        android:layout_width="0.0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="1"/>
	    <Button 
	        android:id="@+id/order_delete"
	        android:layout_width="@dimen/eighty"
	        android:layout_height="@dimen/thirty"
	        android:background="@drawable/bg_null_black"
	        android:textColor="@color/black"
	        android:gravity="center"
	        android:layout_marginRight="@dimen/ten"
	        android:text="@string/order_delete"/>
	    <Button 
	        android:id="@+id/order_assess"
	        android:layout_width="@dimen/eighty"
	        android:layout_height="@dimen/thirty"
	        android:background="@drawable/bg_null_orange"
	        android:textColor="@color/theme_orange"
	        android:gravity="center"
	        android:layout_marginRight="@dimen/ten"
	        android:text="@string/order_assess"/>
    </LinearLayout>
</LinearLayout>